# generics-sop-examples

./: .gitignore  README.md  draft.md  draft.tex  flake.nix  generics-sop-examples.cabal
.github/workflows/: ci.yaml
doc/: draft.md  draft.sh  edit.md
src/: Equality.hs  Main.hs  RouteEncoding.hs
